[tool.poetry]
name = "memory-leak"
version = "0.1.0"
description = ""
authors = ["Tzumx <z.m.dev@outlook.com>"]
readme = "README.md"
packages = [{include = "memory_leak"}]

[tool.poetry.dependencies]
python = "3.10.8"
nautilus-trader = "^1.160.0"
msgspec = "^0.9.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
